api updates and improvements

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 REACT_APP_STAGE=staging
-REACT_APP_STAGING_API_URL=https://vecaf4x7md.execute-api.us-east-1.amazonaws.com/staging
+REACT_APP_STAGING_API_URL=https://7scmv9l0r7.execute-api.us-east-1.amazonaws.com/staging
 REACT_APP_PROD_API_URL=https://ligurn8yka.execute-api.us-east-1.amazonaws.com/production
