--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 REACT_APP_STAGE=staging
-REACT_APP_STAGING_API_URL=https://13ioj5todh.execute-api.us-east-1.amazonaws.com/staging
+REACT_APP_STAGING_API_URL=https://wu706j7j2k.execute-api.us-east-1.amazonaws.com/staging
 REACT_APP_PROD_API_URL=https://gyhnuho692.execute-api.us-east-1.amazonaws.com/production
